push first-scrin & contacts form (is not ready)

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $main-blue: #6083FF;
 $grey: #EBEBEB;
 $black: #313131;
 $text-black: #4C4F65;
+$text-black-alpha-40: rgba(76, 79, 101, 0.4);
 $purple: #FF6183;
 $red: #E00031;
 $white: #FFFFFF;
