--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -3,9 +3,28 @@ body {
     color: $text-black;
     transition: background-color 0.5s, color 0.5s;
 
+    &::-webkit-scrollbar {
+        width: 10px;
+    }
+    &::-webkit-scrollbar-track {
+        background-color: $grey;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: $black;
+        border-radius: 100px;
+    }
+
     &.dark-theme {
         background-color: $black;
         color: $grey;
+
+        &::-webkit-scrollbar-track {
+            background-color: $black;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: $grey;
+        }
     }
 }
 
@@ -13,4 +32,8 @@ body {
     @include up($xl) {
         max-width: 1194px !important;
     }
+}
+
+h1, h2, h3, h4, h5, h6, p, a, span {
+    margin: 0;
 }
