--- a/src/styles/_typo.scss
+++ b/src/styles/_typo.scss
@@ -1,17 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&display=swap');
 
 .h1 {
-    font-family: 'League Spartan';
-    font-size: 96px;
-    line-height: 1;
-    font-weight: 400;
+    @include up($xl) {
+        font-family: 'League Spartan';
+        font-size: 96px;
+        line-height: 1;
+        font-weight: 400;
+    }
 }
 
 .size {
     &-parag {
-        font-family: 'League Spartan';
-        font-size: 24px;
-        font-weight: 400;
-        line-height: 24px;
+        @include up($xl) {
+            font-family: 'League Spartan';
+            font-size: 24px;
+            font-weight: 400;
+            line-height: 24px;
+        }
+    }
+    &-about__title {
+        @include up($xl) {
+            font-family: 'League Spartan';
+            font-size: 40px;
+            font-weight: 700; 
+        }
+    }
+    &-about__subtitle {
+        @include up($xl) {
+            font-family: 'League Spartan';
+            font-size: 24px;
+            font-weight: 700;
+            line-height: normal;
+        }   
+    }
+    &-about__span {
+        @include up($xl) {
+            font-family: 'League Spartan';
+            font-weight: 700;
+            font-size: 10px;
+        }
+    }
+    &-about__span-big {
+        @include up($xl) {
+            font-family: 'League Spartan';
+            font-size: 128px;
+            font-weight: 700;
+        }
+    }
+    &-about__skils {
+        @include up($xl) {
+            font-family: 'League Spartan';
+            font-size: 10px;
+            font-weight: 700;
+        }
     }
 }
