--- a/src/styles/_typo.scss
+++ b/src/styles/_typo.scss
@@ -1,57 +1,56 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&display=swap');
 
 .h1 {
-    @include up($xl) {
-        font-family: 'League Spartan';
+    font-family: 'League Spartan';
+    line-height: 1;
+    font-weight: 400;
+    font-size: 45px;
+
+    @include up($sm) {
+        font-size: 55px;
+    }
+    @include up($md) {
         font-size: 96px;
-        line-height: 1;
-        font-weight: 400;
     }
 }
 
 .size {
     &-parag {
-        @include up($xl) {
-            font-family: 'League Spartan';
-            font-size: 24px;
-            font-weight: 400;
-            line-height: 24px;
-        }
+        font-family: 'League Spartan';
+        font-size: 24px;
+        font-weight: 400;
+        line-height: 24px;
     }
     &-about__title {
-        @include up($xl) {
-            font-family: 'League Spartan';
+        font-family: 'League Spartan';
+        font-size: 24px;
+        font-weight: 700;
+
+        @include up($md) {
             font-size: 40px;
-            font-weight: 700; 
         }
     }
     &-about__subtitle {
-        @include up($xl) {
-            font-family: 'League Spartan';
+        font-family: 'League Spartan';
+        font-size: 18px;
+        font-weight: 700;
+        line-height: normal;
+        @include up($md) {
             font-size: 24px;
-            font-weight: 700;
-            line-height: normal;
         }   
     }
     &-about__span {
-        @include up($xl) {
-            font-family: 'League Spartan';
-            font-weight: 700;
-            font-size: 10px;
-        }
+        font-family: 'League Spartan';
+        font-weight: 700;
+        font-size: 10px;
     }
     &-about__span-big {
-        @include up($xl) {
-            font-family: 'League Spartan';
+        font-family: 'League Spartan';
+        font-size: 50px;
+        font-weight: 700;
+        line-height: normal;
+        @include up($md) {
             font-size: 128px;
-            font-weight: 700;
-        }
-    }
-    &-about__skils {
-        @include up($xl) {
-            font-family: 'League Spartan';
-            font-size: 10px;
-            font-weight: 700;
         }
     }
 }
